# Afq

./: .gitignore  CMakeLists.txt  DataModel.h  Logger.cpp  Logger.h  Main.qml  README.md  main.cpp
DataModel/: AcademicYear.cpp  AcademicYear.h  Attendance.cpp  Attendance.h  BaseEntity.h  Certificate.cpp  Certificate.h  Class.cpp  Class.h  ClassSummary.cpp  ClassSummary.h  CourseOffering.cpp  CourseOffering.h  Curriculum.cpp  Curriculum.h  DisciplinaryAction.cpp  DisciplinaryAction.h  EducationStage.cpp  EducationStage.h  Enrollment.cpp  Enrollment.h  Grade.cpp  Grade.h  Guardian.cpp  Guardian.h  Holiday.cpp  Holiday.h  Notification.cpp  Notification.h  Person.cpp  Person.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  StudentEnrollment.cpp  StudentEnrollment.h  StudentGuardian.cpp  StudentGuardian.h  StudentSummary.cpp  (+5 more)
data/: AcademicYearDAL.cpp  AcademicYearDAL.h  AcademicYearDataHandler.cpp  AcademicYearDataHandler.h  CRUDoperations.h  ClassDAL.cpp  ClassDAL.h  DataModels.h  EnrollmentDAL.cpp  EnrollmentDAL.h  GuardianDataHandler.cpp  GuardianDataHandler.h  Logger.cpp  Logger.h  LoggerWorker.cpp  LoggerWorker.h  PeopleDataHandler.cpp  PeopleDataHandler.h  PersonDAL.cpp  PersonDAL.h  SchoolDAL.cpp  SchoolDAL.h  StudentDataHandler.cpp  StudentDataHandler.h  StudentEnrollmentDAL.cpp  StudentEnrollmentDAL.h  StudentsDAL.h  TermsDAL.cpp  TermsDAL.h  dataModels.h  personDAL.cpp  personDAL.h  schoolDAL.cpp  schoolDAL.h  studentsDAL.cpp  studentsDAL.h
data/DatabaseManager/: connectionPool.cpp  connectionPool.h  connectionWrapper.cpp  connectionWrapper.h  databaseManager.cpp  databaseManager.h
test/: test_addStudent.cpp  test_main.cpp
